recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:19: error: not enough arguments for method carre: (n: Int)Unit.
Unspecified value parameter n.
  carre()
       ^